--- a/src/main/resources/templates/error/403.html
+++ b/src/main/resources/templates/error/403.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="ko" 
-      xmlns:th="http://www.thymeleaf.org"
+<html data-theme="auto"
+      lang="ko"
       th:replace="~{fragments/base :: layout(~{::title}, ~{::main})}"
-      data-theme="auto">
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>접근 권한 없음 - Board Hole</title>
 </head>
@@ -35,9 +35,9 @@
         <footer>
             <nav>
                 <ul>
-                    <li><a href="/boards" role="button" class="secondary">게시판으로</a></li>
+                    <li><a class="secondary" href="/boards" role="button">게시판으로</a></li>
                     <li><a href="/" role="button">홈으로 돌아가기</a></li>
-                    <li><a href="/auth/login" role="button" class="secondary outline">다른 계정으로 로그인</a></li>
+                    <li><a class="secondary outline" href="/auth/login" role="button">다른 계정으로 로그인</a></li>
                 </ul>
             </nav>
         </footer>
