--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -2,7 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <body>
 <!-- 푸터 Fragment -->
-<footer th:fragment="footer" class="app-footer">
+<footer class="app-footer" th:fragment="footer">
     <small>© 2024 Board Hole. All rights reserved.</small>
 </footer>
 </body>
