--- a/src/main/resources/templates/fragments/popover.html
+++ b/src/main/resources/templates/fragments/popover.html
@@ -2,9 +2,9 @@
     <div id="manage-menu" popover="auto">
         <a th:href="@{/boards/{id}/edit(id=${board.id})}">✏️ 수정</a>
         <hr>
-        <button type="button" commandfor="delete-board-detail-[[${board.id}]]" 
-                command="show-modal"
-                style="all: unset; cursor: pointer; display: block; padding: 0.35rem 0; color: var(--pico-del-color);">
+        <button command="show-modal" commandfor="delete-board-detail-[[${board.id}]]"
+                style="all: unset; cursor: pointer; display: block; padding: 0.35rem 0; color: var(--pico-del-color);"
+                type="button">
             🗑️ 삭제
         </button>
         <div th:insert="~{fragments/modal :: delete-confirm(
